--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <h1> Hello world!
     </h1>
     <p> I try to work with Git</p>
+    <a href="https://git-scm.com/">Git website</a>
     <p>Thank you for attention!</p>
 </body>
 </html>
