--- a/index.html
+++ b/index.html
@@ -10,5 +10,12 @@
     <p> I try to work with Git</p>
     <a href="https://git-scm.com/">Git website</a>
     <p>Thank you for attention!</p>
+
+
+    <a href="https://git-scm.com/">Git website</a>
+    <p>Thank you for attention!</p>
+
+   
+    
 </body>
 </html>
